fix scrollbar on post sort picker
this fixes an issue where on the post sort picker a scrollbar was
showing up unnecessarily.

closes #2450
pr #2538

--- a/static/scss/picker.scss
+++ b/static/scss/picker.scss
@@ -6,6 +6,10 @@
     align-items: center;
   }
 
+  .mdc-list {
+    overflow: hidden;
+  }
+
   .mdc-list-item {
     margin: 0 8px;
   }
